--- a/appspec.yml
+++ b/appspec.yml
@@ -1,19 +1,16 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/www/html/
-hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-    - location: scripts/clean
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
+  #將取下的 war 檔案搬動到 tomcat8 的 webapp 根目錄下
+  - source: ROOT.war
+    destination: /var/lib/tomcat8/webapps/
 
+hooks:
+  ApplicationStop:
+    - location: scripts/stop.sh
+      timeout: 300
+  BeforeInstall:
+    - location: scripts/clean.sh
+  ApplicationStart:
+    - location: scripts/start.sh
+      timeout: 360
